<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:backgroundTint="#FFA07A"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        android:id="@+id/cv_main">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent">

            <Button
                android:id="@+id/btn_doctorlist"
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_button"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="@string/list_doctor"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <Button
                android:id="@+id/btn_restaurant_list"
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/list_restaurant"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />


            <Button
                android:id="@+id/btn_atm_list"
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="160dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="1dp"
                android:background="@drawable/rounded_button"
                android:text="@string/list_atm"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btn_cafe_list"
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="220dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="1dp"
                android:background="@drawable/rounded_button"
                android:text="@string/list_cafe"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <!--<FrameLayout-->
        <!--android:id="@+id/container"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent" />-->

</FrameLayout>


